@startuml

skinparam linetype ortho

entity "Challenge" as c {
    *name
    control_solution
    short_resume
    description
    --
    time_uploaded
}

entity "TestCase" as tc {
    max_runtime
    max_memory
    --
    name 
    description 
    points
}

entity "Solution" as s {
    entry_point
    --
    time_submitted
}

entity "User" as u {
    *kca_id
    --
    nickname
}

entity "File" as f {
    location_in_bucket
}

entity "Result" as r {
    time_evaluated
    scored_points
}

entity "SubResult" as sr {
    points
    --
    runtime
    memory
}


u ||-o{ s
s ||-|{ f
c ||--|{ f
tc ||--|{ f
c ||--|{ tc
s }o-|| c
s ||-|| r
r ||--|{ sr 
sr }|-|| tc
f }|--|| sr
c }o--|| u

@enduml 